# redtime

./: .gitignore  README.md  main.py  pyproject.toml
commands/: add_time.py  close_ticket_id.py  redmine_request.py  reopen_ticket.py  show_time.py
src/redtime/: __main__.py
src/redtime/commands/: add_time.py  list_project_tickets.py  list_tickets.py
