[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "redtime"
version = "0.5.0"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "requests",
    "rich",
]

[project.scripts]
redtime = "redtime.__main__:app"

[tool.setuptools.packages.find]
where = ["src"]
